# TelAzCpp

./: .gitignore  CMakeLists.txt  to do.txt
config/: config.txt
include/: configParameters.h  cost.h  data.h  employee.h  largeNeighborhoodSearch.h  metaheuristic.h  random.h  randomInsertion.h  shiftType.h  shiftVector.h  solution.h  solutionOperator.h  utilities.h
input/: istruzioni.txt  operatori.txt  turni.txt
src/: CMakeLists.txt  configParameters.cpp  data.cpp  employee.cpp  largeNeighborhoodSearch.cpp  main.cpp  random.cc  randomInsertion.cpp  shiftType.cpp  solution.cpp  utilities.cpp
test/output/: solution.txt  solution2.txt
test/src/: CMakeLists.txt  testMain.cpp
